<?xml version="1.0" encoding="utf-8"?>
<resources>

	<!--
	MainActivity
	-->
    <string name="app_name">数码宝贝2048</string>

	<string name="edit">修改昵称</string>
	<string name="editDialogTitle">取一个好听的名字吧~</string>
	<string name="cancelEdit">放弃修改</string>
	<string name="saveEdit">保存修改</string>
	<string name="editFailed">修改昵称失败，字数不得少于3！</string>

	<string name="about">给我动力</string>
	<string name="aboutDialogTitle">求关注求支持求动力~</string>
	<string name="adWasClosed">
		亲，玩的开心吗？支持一下我呗~\n
		点下面的按钮查看广告就行了，\n
		帮个忙吧，我会很感激的！！！\n
	</string>
	<string name="adIsShowing">
		亲，没流量了？不想看广告了？\n
		没关系，那就关掉广告吧~\n
		谢谢您的支持！\n
	</string>
	<string name="copyright">
		\nCopyright©2015 正逍遥0716.\n
		Some Rights Reserved.
	</string>
	<string name="attentionMe">关注我</string>
	<string name="supportMe">支持我</string>
	<string name="closeAd">省流量</string>

	<string name="exit">退出游戏</string>

	<string name="helpString0">
		每次滑动都会随机获得一只幼年体数码宝贝或一枚数码蛋。
	</string>
	<string name="helpString1">
		手指滑动就能上下左右，让数码宝贝进化吧！
	</string>
	<string name="helpString2">
		当前数码宝贝进化到究极体后，还可以加入新的伙伴继续进化哦！
	</string>

	<string name="adLoading">谢谢您，广告加载中，请稍候...</string>
	<string name="loadFailed">呃，广告加载失败了，不过还是谢谢您的支持</string>
	<string name="loadSucceed">
		广告已成功加载，再次感谢您的支持\n
		您可以随时在标题界面的“给我动力”菜单内关闭它。
	</string>

	<!--
	GameActivity
	-->
	<string name="pleaseChoose">请选择你的新伙伴：</string>
	<string name="prevDigimon">上一个</string>
	<string name="chooseThis">就选你了</string>
	<string name="nextDigimon">下一个</string>

	<string name="level">关卡：</string>
	<string name="score">分数：</string>

	<string name="restart">重新开始</string>
	<string name="replay">重玩本关</string>

	<string name="closeSounds">禁用音效</string>
	<string name="playSounds">开启音效</string>
	<string name="closeMusic">关闭音乐</string>
	<string name="playMusic">播放音乐</string>

	<string name="backGame">返回游戏</string>
	<string name="quitGame">回到标题</string>

	<string name="yourLevel">等级：%02d级</string>
	<string name="yourScore">得分：%5d分</string>
	<string name="yourRank">在线排名：</string>
	<string name="openAdView">点广告，支持我</string>

	<string name="levelUp">恭喜晋级！</string>
	<!--<string name="replay">重玩本关</string>-->
	<string name="nextLevel">继续挑战</string>

	<string name="gameOver">游戏结束、</string>
	<string name="replayLater">我想确认一下</string>
	<string name="replayNow">好吧再来一次</string>

	<!--
	RankActivity
	-->
	<string name="myRecord">我的记录</string>
	<string name="dayRank">今日排名</string>
	<string name="weekRank">本周排行</string>
	<string name="lowestRank">囧排行</string>

	<string name="getRankFailed">抱歉，排行数据获取失败</string>
    <string name="title_activity_guide">GuideActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

</resources>
