<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <android.support.v4.view.ViewPager
        android:id="@+id/chooseViewPager"
        android:layout_width="300dp"
        android:layout_height="300dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        style="?android:attr/buttonBarStyle">

        <Button
            android:id="@+id/prevDigimonButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/prevDigimon"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/chooseThisButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/chooseThis"
            style="?android:attr/buttonBarButtonStyle"/>

        <Button
            android:id="@+id/nextDigimonButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/nextDigimon"
            style="?android:attr/buttonBarButtonStyle"/>

    </LinearLayout>

</LinearLayout>
